--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "build": "npm run clean:lib && babel src --out-dir lib",
     "clean:lib": "rimraf lib",
     "test": "mocha ./tests/test.js --timeout 180000",
-    "eslint": "eslint ./ --fix"
+    "eslint": "eslint ./ --fix",
+    "case-check": "case-check --dir=\"./src\""
   },
   "repository": {
     "type": "git",
     "url": "git@github.com:duan602728596/babel-plugin-import-components-style.git"
+  },
+  "dependencies": {
+    "lodash": "^4.17.11"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.3",
@@ -28,6 +32,7 @@
     "chai": "^4.2.0",
     "commitizen": "^3.1.1",
     "cz-conventional-changelog": "^2.1.0",
+    "es-module-path-case-check": "^1.4.0",
     "eslint": "^5.16.0",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
