--- a/.babelrc
+++ b/.babelrc
@@ -11,5 +11,16 @@
         "useBuiltIns": false
       }
     ]
+  ],
+  "plugins": [
+    [
+      "@babel/plugin-transform-runtime",
+      {
+        "corejs": false,
+        "helpers": true,
+        "regenerator": true,
+        "useESModules": true
+      }
+    ]
   ]
 }
